完成历史线统计功能
